tests/res/match/error_two_rest.say
// An array matcher allows only one rest; a second is a parse error.
say a = [1, 2, 3];
if a ~ [.., ..] { // error: An array matcher allows at most one rest `..`
    print("no");
}
